<resources>
    <string name="app_name">FtsLite</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main_tab">FTS Lite</string>
    <string name="action_refresh">Refresh</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="unable_load">Nothing loaded</string>
    <string name="load_success">Successfully loaded </string>
    <string name="items"> items</string>
    <string name="ok">OK</string>
    <string name="action_sort">Sort by..</string>
    <string name="sort">Name</string>
    <string name="sort_by">Sort by ..</string>
    <string name="action_auto_update">Auto update</string>
    <string name="set_auto_update_time">Interval in minutes</string>
    <string name="empty" />
    <string name="last_upd">Last update on:</string>
    <string name="action_about">About</string>
    <string name="disclaimer">Disclaimer:
Fusion Media/Investing.com/Greyog App Products will not accept any liability for loss or damage as a result of reliance on the information contained within this tool including data, quotes, charts and buy/sell signals. Please be fully informed regarding the risks and costs associated with trading the financial markets, it is one of the riskiest investment forms possible. Currency trading on margin involves high risk, and is not suitable for all investors. Before deciding to trade foreign exchange or any other financial instrument you should carefully consider your investment objectives, level of experience, and risk appetite.</string>
    <string name="strong_up">Strong trend up</string>
    <string name="neutral">No trend</string>
    <string name="strong_down">Strong trend down</string>
    <string name="trend_down">Trend down</string>
    <string name="trend_up">Trend up</string>
    <string-array name="sort_array">
        <item>Name</item>
        <item>5 min</item>
        <item>15 min</item>
        <item>Hour</item>
        <item>Day</item>
    </string-array>
</resources>
