<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.greyogproducts.greyog.ftslite.MainTabsActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="110"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="90"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        />
    <item
        android:id="@+id/action_set_auto_update"
        android:orderInCategory="95"
        android:title="@string/action_auto_update"
        app:showAsAction="never"/>
</menu>
